[gd_scene load_steps=25 format=3 uid="uid://dii15jg5ix8p3"]

[ext_resource type="PackedScene" uid="uid://bevbiu3viudfu" path="res://'너'/'너'.tscn" id="1_gofqw"]
[ext_resource type="Texture2D" uid="uid://dwkyr27m0grnf" path="res://asset/green-wood.png" id="2_ngr6u"]
[ext_resource type="Texture2D" uid="uid://cfpw7214dvfgd" path="res://asset/dark-wood.png" id="3_cdb4n"]
[ext_resource type="AudioStream" uid="uid://b3f4dldtlrjcj" path="res://asset/sound effect/slow-keyboard-typing-ultra-realistic-375855.mp3" id="4_ds5he"]
[ext_resource type="FontFile" uid="uid://dsfsvo8aw16ct" path="res://asset/font/DNFForgedBlade-Light.ttf" id="4_i6sf1"]
[ext_resource type="Script" uid="uid://d3d8joponxsqn" path="res://챕터1/피아노_소녀.gd" id="5_6b6sm"]
[ext_resource type="Script" uid="uid://b8jsukirnlgvc" path="res://챕터1/audio_stream_player_2d.gd" id="5_h7o38"]
[ext_resource type="FontFile" uid="uid://dfguge002lq2d" path="res://asset/font/NEXON Lv2 Gothic Medium.ttf" id="5_nui3j"]
[ext_resource type="Texture2D" uid="uid://bkldhfyh76xls" path="res://asset/ChatGPT Image 2025년 8월 15일 오후 06_51_50.png" id="6_nui3j"]
[ext_resource type="Texture2D" uid="uid://sq8flivs5gnq" path="res://asset/Piano.png" id="8_x4ot4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cdb4n"]
size = Vector2(1104, 159)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6sf1"]
size = Vector2(191.5, 92)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6b6sm"]
size = Vector2(101.5, 77)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4kifi"]
size = Vector2(165.5, 663)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nui3j"]
size = Vector2(1283, 153)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4ot4"]
size = Vector2(164.5, 569)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ds5he"]
size = Vector2(96, 154)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7o38"]
size = Vector2(106.5, 107.5)

[sub_resource type="Animation" id="Animation_x4ot4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/AudioStreamPlayer2D:stream")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ds5he")]
}

[sub_resource type="Animation" id="Animation_i6sf1"]
resource_name = "RESET"
length = 20.0
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667, 2.5, 4.26667, 5.96667, 8.33333, 9.06667, 10.5667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 2,
"values": ["", "", "... 왔구나...!", "... 왔구나...!", "", "널.. 기다리고 있었어", "널.. 기다리고 있었어", ""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.4, 10, 13.0333, 14.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0.356863), Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D:zoom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(9.96667, 14.7333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(9.96667, 14.7333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(833, 277), Vector2(640, 360)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Label:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 5.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(187, 52), Vector2(325, 52)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Label:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 5.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(552, 587), Vector2(469, 584)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AnimationPlayer/AudioStreamPlayer2D:stream")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i6sf1"]
_data = {
&"RESET": SubResource("Animation_x4ot4"),
&"intro": SubResource("Animation_i6sf1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0merb"]
size = Vector2(270, 213)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b6sm"]
atlas = ExtResource("6_nui3j")
region = Rect2(0, 0, 768, 1024)

[sub_resource type="SpriteFrames" id="SpriteFrames_10kaa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b6sm")
}],
"loop": true,
"name": &"look_piano",
"speed": 5.0
}]

[node name="챕터1" type="Node2D"]

[node name="너" parent="." instance=ExtResource("1_gofqw")]
z_index = 1
position = Vector2(290, 400)
scale = Vector2(0.8, 0.8)

[node name="바닥" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(238, 292)
scale = Vector2(3, 3)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥" type="Sprite2D" parent="바닥"]
position = Vector2(63, 3.8147e-06)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥2" type="Sprite2D" parent="바닥"]
position = Vector2(126, 4.76837e-06)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥3" type="Sprite2D" parent="바닥"]
position = Vector2(189, 5.72205e-06)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥4" type="Sprite2D" parent="바닥"]
position = Vector2(252, -4.45048e-06)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥5" type="Sprite2D" parent="바닥"]
position = Vector2(-7.62939e-06, 18.5)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥6" type="Sprite2D" parent="바닥"]
position = Vector2(63, 18.5)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥7" type="Sprite2D" parent="바닥"]
position = Vector2(126, 18.5)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥8" type="Sprite2D" parent="바닥"]
position = Vector2(189, 18.5)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥9" type="Sprite2D" parent="바닥"]
position = Vector2(252, 18.5)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥10" type="Sprite2D" parent="바닥"]
position = Vector2(-2.54313e-06, 36.8333)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥11" type="Sprite2D" parent="바닥"]
position = Vector2(63, 36.8333)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥12" type="Sprite2D" parent="바닥"]
position = Vector2(126, 36.8333)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥13" type="Sprite2D" parent="바닥"]
position = Vector2(189, 36.8333)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥14" type="Sprite2D" parent="바닥"]
position = Vector2(252, 36.8333)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥15" type="Sprite2D" parent="바닥"]
position = Vector2(2.54313e-06, 54.8333)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥16" type="Sprite2D" parent="바닥"]
position = Vector2(63, 54.8333)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥17" type="Sprite2D" parent="바닥"]
position = Vector2(126, 54.8333)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥18" type="Sprite2D" parent="바닥"]
position = Vector2(189, 54.8333)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥19" type="Sprite2D" parent="바닥"]
position = Vector2(252, 54.8333)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥20" type="Sprite2D" parent="바닥"]
position = Vector2(7.62939e-06, 73.1667)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥21" type="Sprite2D" parent="바닥"]
position = Vector2(63, 73.1667)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥22" type="Sprite2D" parent="바닥"]
position = Vector2(126, 73.1667)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥23" type="Sprite2D" parent="바닥"]
position = Vector2(189, 73.1667)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥24" type="Sprite2D" parent="바닥"]
position = Vector2(252, 73.1667)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥25" type="Sprite2D" parent="바닥"]
position = Vector2(7.62939e-06, 91.1667)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥26" type="Sprite2D" parent="바닥"]
position = Vector2(63, 91.1667)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥27" type="Sprite2D" parent="바닥"]
position = Vector2(126, 91.1667)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥28" type="Sprite2D" parent="바닥"]
position = Vector2(189, 91.1667)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥29" type="Sprite2D" parent="바닥"]
position = Vector2(252, 91.1667)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥30" type="Sprite2D" parent="바닥"]
z_index = -1
position = Vector2(274.667, 36.8333)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="바닥31" type="Sprite2D" parent="바닥"]
z_index = -1
position = Vector2(274.667, 54.8333)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(96, 12, 64, 19)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
z_index = -1

[node name="벽" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(626, 91)
shape = SubResource("RectangleShape2D_cdb4n")

[node name="벽" type="Sprite2D" parent="StaticBody2D/벽"]
position = Vector2(-453, 46.25)
scale = Vector2(3, 3)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(191.5, 69, 32.5, 85)

[node name="벽2" type="Sprite2D" parent="StaticBody2D/벽"]
position = Vector2(-364.5, 46.5)
scale = Vector2(3, 3)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(191.5, 69, 32.5, 85)

[node name="벽3" type="Sprite2D" parent="StaticBody2D/벽"]
position = Vector2(-276.5, 46.25)
scale = Vector2(3, 3)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(191.5, 69, 32.5, 85)

[node name="벽4" type="Sprite2D" parent="StaticBody2D/벽"]
position = Vector2(-188, 46)
scale = Vector2(3, 3)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(191.5, 69, 32.5, 85)

[node name="벽5" type="Sprite2D" parent="StaticBody2D/벽"]
position = Vector2(-98.5, 46.25)
scale = Vector2(3, 3)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(191.5, 69, 32.5, 85)

[node name="벽6" type="Sprite2D" parent="StaticBody2D/벽"]
position = Vector2(-10, 46.5)
scale = Vector2(3, 3)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(191.5, 69, 32.5, 85)

[node name="벽7" type="Sprite2D" parent="StaticBody2D/벽"]
position = Vector2(78, 46.25)
scale = Vector2(3, 3)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(191.5, 69, 32.5, 85)

[node name="벽8" type="Sprite2D" parent="StaticBody2D/벽"]
position = Vector2(166.5, 46)
scale = Vector2(3, 3)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(191.5, 69, 32.5, 85)

[node name="벽9" type="Sprite2D" parent="StaticBody2D/벽"]
position = Vector2(256.5, 46.25)
scale = Vector2(3, 3)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(191.5, 69, 32.5, 85)

[node name="벽10" type="Sprite2D" parent="StaticBody2D/벽"]
position = Vector2(345, 46.5)
scale = Vector2(3, 3)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(191.5, 69, 32.5, 85)

[node name="벽11" type="Sprite2D" parent="StaticBody2D/벽"]
position = Vector2(433, 46.25)
scale = Vector2(3, 3)
texture = ExtResource("2_ngr6u")
region_enabled = true
region_rect = Rect2(191.5, 69, 32.5, 85)

[node name="피아노" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(834, 276)
shape = SubResource("RectangleShape2D_i6sf1")

[node name="피아노" type="Sprite2D" parent="StaticBody2D/피아노"]
position = Vector2(1.5, -4)
scale = Vector2(3, 3)
texture = ExtResource("3_cdb4n")
region_enabled = true
region_rect = Rect2(0, 850, 64, 74)

[node name="침대" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(190, 284)
shape = SubResource("RectangleShape2D_6b6sm")

[node name="침대" type="Sprite2D" parent="StaticBody2D/침대"]
position = Vector2(0.75, 29.5)
scale = Vector2(3, 3)
texture = ExtResource("3_cdb4n")
region_enabled = true
region_rect = Rect2(479.5, 416, 33, 64)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(835, 400)
scale = Vector2(4, 4)
texture = ExtResource("3_cdb4n")
region_enabled = true
region_rect = Rect2(100.96, 900.922, 22.1014, 12.1025)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(58.25, 389.5)
shape = SubResource("RectangleShape2D_4kifi")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(639.5, 670.5)
shape = SubResource("RectangleShape2D_nui3j")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1237, 320)
shape = SubResource("RectangleShape2D_x4ot4")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1138, 235)
shape = SubResource("RectangleShape2D_ds5he")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1143.75, 538.25)
shape = SubResource("RectangleShape2D_h7o38")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i6sf1")
}
autoplay = "intro"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AnimationPlayer"]
stream = ExtResource("4_ds5he")
volume_db = 1.0
script = ExtResource("5_h7o38")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 2
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = -10
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(833, 277)
zoom = Vector2(2, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
z_index = 100
offset_left = 469.0
offset_top = 584.0
offset_right = 794.0
offset_bottom = 636.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_i6sf1")
theme_override_font_sizes/font_size = 40
text = "널.. 기다리고"
metadata/_edit_use_anchors_ = true

[node name="피아노소녀" type="Area2D" parent="."]
position = Vector2(857, 315)
script = ExtResource("5_6b6sm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="피아노소녀"]
position = Vector2(-42, 70.5)
shape = SubResource("RectangleShape2D_0merb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="피아노소녀"]
position = Vector2(-21.3999, 20.8)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_10kaa")
animation = &"look_piano"

[node name="InteractionUI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="InteractionUI"]
z_index = 3
offset_left = 519.0
offset_top = 196.0
offset_right = 705.0
offset_bottom = 231.0
theme_override_fonts/font = ExtResource("5_nui3j")
theme_override_font_sizes/font_size = 30
text = "[스페이스] 대화"
metadata/_edit_use_anchors_ = true

[node name="DialogueUI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="DialogueUI"]
offset_left = -2.0
offset_top = 2.0
offset_right = 1280.0
offset_bottom = 720.0
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="DialogueUI/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.872403
anchor_top = 0.544393
anchor_right = 0.872403
anchor_bottom = 0.544393
offset_left = -149.42
offset_top = -149.874
offset_right = 150.58
offset_bottom = 150.126
texture = ExtResource("8_x4ot4")
expand_mode = 1
flip_h = true
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="DialogueUI/Panel"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00312012
anchor_top = 0.0779944
anchor_right = 0.00312012
anchor_bottom = 0.0779944
offset_left = 387.0
offset_top = 521.0
offset_right = 891.0
offset_bottom = 589.0
theme_override_fonts/font = ExtResource("5_nui3j")
theme_override_font_sizes/font_size = 25
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="DialogueUI/Panel"]
layout_mode = 0
offset_top = 540.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.0748255, 0.0293138, 0.0717633, 0.588235)

[connection signal="body_entered" from="피아노소녀" to="피아노소녀" method="_on_body_entered"]
[connection signal="body_exited" from="피아노소녀" to="피아노소녀" method="_on_body_exited"]
